add search tenders by filter endpoint
